Move filter parts into components
in order to fix the mobile dropdown filter component, that was broken
after additional assigns were filtered out and not passed anymore to the
template.

--- a/lib/adoptoposs_web/templates/interest/actions.html.heex
+++ b/lib/adoptoposs_web/templates/interest/actions.html.heex
@@ -15,7 +15,7 @@
       <% end %>
     </div>
 
-    <div class="whitespace-pre-wrap text-gray-600 my-2"><%= @project.description %></div>
+    <div class="text-gray-600 my-2 whitespace-pre-wrap" phx-no-format><%= @project.description %></div>
   </div>
 
   <div class="flex flex-wrap flex-row justify-between items-center">
