--- a/lib/adoptoposs_web/templates/landing_page/index.html.heex
+++ b/lib/adoptoposs_web/templates/landing_page/index.html.heex
@@ -11,7 +11,7 @@
       <hr class="flex-grow border-gray-50" />
       <div class="self-center">
         <.link
-          navigate={Routes.live_path(@socket, AdoptopossWeb.ExploreLive)}
+          navigate={Routes.live_path(@socket, AdoptopossWeb.ExploreLive.Index)}
           class="button-link light mx-3"
         >
           Explore Projects
@@ -93,7 +93,7 @@
       <hr class="flex-grow border-gray-500" />
       <div class="self-center">
         <.link
-          navigate={Routes.live_path(@socket, AdoptopossWeb.ExploreLive)}
+          navigate={Routes.live_path(@socket, AdoptopossWeb.ExploreLive.Index)}
           class="button-link dark mx-3 gray-500"
         >
           Explore Projects
@@ -129,7 +129,7 @@
 
     <div class="mt-12 text-center self-center">
       <.link
-        navigate={Routes.live_path(@socket, AdoptopossWeb.ExploreLive)}
+        navigate={Routes.live_path(@socket, AdoptopossWeb.ExploreLive.Index)}
         class="button-link medium mx-3"
       >
         Explore More…
