--- a/lib/adoptoposs_web/templates/settings/index.html.heex
+++ b/lib/adoptoposs_web/templates/settings/index.html.heex
@@ -9,7 +9,7 @@
         <p class="">
           <i class="fa-solid fa-circle-info mr-1.5"></i>
           Programming languages you add here will appear as quick filters on the <.link navigate={
-            Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive)
+            Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive.Index)
           }>
             explore projects page
           </.link>.
