--- a/lib/adoptoposs_web/templates/shared/navigation_logged_out.html.heex
+++ b/lib/adoptoposs_web/templates/shared/navigation_logged_out.html.heex
@@ -1,6 +1,6 @@
 <div class="flex flex-row items-center">
   <.link
-    navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive)}
+    navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive.Index)}
     class="flex items-center p-2 mr-4"
   >
     <i class="fa-solid fa-magnifying-glass mr-2"></i>
