--- a/lib/adoptoposs_web/templates/sharing/project.html.heex
+++ b/lib/adoptoposs_web/templates/sharing/project.html.heex
@@ -27,7 +27,7 @@
     <% end %>
 
     <div class="mt-6 text-center text-lg">
-      <.link navigate={Routes.live_path(@socket, AdoptopossWeb.ExploreLive)}>
+      <.link navigate={Routes.live_path(@socket, AdoptopossWeb.ExploreLive.Index)}>
         Explore more projects
       </.link>
     </div>
