--- a/lib/adoptoposs_web/live/explore_live/index.html.heex
+++ b/lib/adoptoposs_web/live/explore_live/index.html.heex
@@ -38,7 +38,9 @@
             <div class="block w-full md:hidden">
               <.live_component
                 module={AdoptopossWeb.ProjectFiltersComponent}
-                {Map.merge(assigns, %{id: "filters-dropdown", dropdown: true})}
+                id="filters-dropdown"
+                dropdown={true}
+                {assigns}
               />
             </div>
 
@@ -91,7 +93,9 @@
     <div class="hidden md:flex self-stretch w-1/3 ml-8">
       <.live_component
         module={AdoptopossWeb.ProjectFiltersComponent}
-        {Map.put(assigns, :id, "filters-sidebar")}
+        id="filters-sidebar"
+        dropdown={false}
+        {assigns}
       />
     </div>
   </div>
