--- a/lib/adoptoposs_web/templates/messages/contacted.html.heex
+++ b/lib/adoptoposs_web/templates/messages/contacted.html.heex
@@ -25,7 +25,7 @@
             You did not contact any maintainer yet.
           </p>
           <.link
-            navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive)}
+            navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive.Index)}
             class="button-link mb-4"
           >
             Explore Projects
@@ -69,9 +69,10 @@
                       class: "self-start h-8 w-8 rounded rounded-full"
                     ) %>
 
-                    <div class="ml-2 md:ml-4 whitespace-pre-wrap italic text-pink-900">
-                      <%= String.trim(interest.message) %>
-                    </div>
+                    <div
+                      class="whitespace-pre-line ml-2 md:ml-4 italic text-pink-900"
+                      phx-no-format
+                    ><%= String.trim(interest.message) %></div>
                   </div>
                 </div>
               </div>
