--- a/lib/adoptoposs_web/templates/page/faq.html.heex
+++ b/lib/adoptoposs_web/templates/page/faq.html.heex
@@ -69,7 +69,7 @@
       Your submitted repositories are listed on your
       <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ProjectLive)}>projects page</.link>
       and visible for everyone on the <.link navigate={
-        Routes.live_path(@conn, AdoptopossWeb.ExploreLive)
+        Routes.live_path(@conn, AdoptopossWeb.ExploreLive.Index)
       }>
         public explore page
       </.link>.
@@ -85,7 +85,9 @@
     <%= faq "How can I become a maintainer for a project on Adoptoposs?" do %>
       <p>
         Projects that are looking for maintainers are visible on the
-        <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive)}>explore page</.link>
+        <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive.Index)}>
+          explore page
+        </.link>
         or your personal
         <%= if @current_user do %>
           <.link navigate={Routes.live_path(@conn, AdoptopossWeb.LandingPageLive)}>
@@ -106,7 +108,7 @@
     <%= faq "How can I find interesting projects?" do %>
       <p>
         You will find projects on our <.link navigate={
-          Routes.live_path(@conn, AdoptopossWeb.ExploreLive)
+          Routes.live_path(@conn, AdoptopossWeb.ExploreLive.Index)
         }>explore page</.link>.
         You can search for project names, organizations, and parts of the maintainer’s description. You can filter all projects by selecting the languages you are interested in.
       </p>
