--- a/lib/adoptoposs_web/templates/shared/navigation_logged_in.html.heex
+++ b/lib/adoptoposs_web/templates/shared/navigation_logged_in.html.heex
@@ -26,7 +26,7 @@
       Messages
     </.link>
 
-    <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive)} class="nav-link">
+    <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive.Index)} class="nav-link">
       <i class="fa-solid fa-magnifying-glass mr-2"></i>
       <span class="inline">Explore</span>
     </.link>
@@ -73,7 +73,7 @@
     </.link>
 
     <.link
-      navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive)}
+      navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive.Index)}
       class="flex items-center p-2 mr-4"
     >
       <i class="fa-solid fa-magnifying-glass mr-2"></i>
