--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -109,7 +109,7 @@ header {
 }
 
 nav {
-  @apply flex max-w-6xl mx-auto items-center flex-wrap pr-4 xs:px-6 py-4;
+  @apply flex max-w-screen-xl mx-auto items-center flex-wrap pr-4 xs:px-6 py-4;
 }
 
 main {
@@ -117,7 +117,7 @@ main {
 }
 
 section {
-  @apply px-4 max-w-6xl w-full mx-auto;
+  @apply px-4 max-w-screen-xl w-full mx-auto;
 }
 
 footer {
