Fix removable language tag layout

--- a/lib/adoptoposs_web/templates/shared/language_tag.html.heex
+++ b/lib/adoptoposs_web/templates/shared/language_tag.html.heex
@@ -7,7 +7,7 @@
   <div class="w-max-content ml-2">
     <%= @name %>
     <%= if assigns[:removeable] do %>
-      <i class="fa-solid fa-xmark"></i>
+      <i class="fa-solid fa-xmark text-xs ml-1"></i>
     <% end %>
   </div>
 </div>
