Use webp images instead of png
This reduces the image's file size a bit.

--- a/lib/adoptoposs_web/templates/layout/email.html.heex
+++ b/lib/adoptoposs_web/templates/layout/email.html.heex
@@ -77,7 +77,7 @@
 
         <mj-image
           width="101px"
-          src={Routes.static_url(AdoptopossWeb.Endpoint, "/images/adoptoposs-logo.png")}
+          src={Routes.static_url(AdoptopossWeb.Endpoint, "/images/adoptoposs-logo.webp")}
         />
       </mj-column>
     </mj-section>
