--- a/lib/adoptoposs_web/templates/layout/error.html.heex
+++ b/lib/adoptoposs_web/templates/layout/error.html.heex
@@ -22,7 +22,7 @@
         <div class="flex items-center shrink-0 mr-6">
           <a href="/" class="font-semibold text-xl tracking-tight">
             <img
-              src={Routes.static_path(@conn, "/images/adoptoposs-logo.png")}
+              src={Routes.static_path(@conn, "/images/adoptoposs-logo.webp")}
               alt="Adoptoposs"
               class="h-10"
             />
