--- a/lib/adoptoposs_web/templates/landing_page/index.html.heex
+++ b/lib/adoptoposs_web/templates/landing_page/index.html.heex
@@ -50,7 +50,7 @@
     <div class="mt-4 grid grid-flow-row md:grid-cols-3 gap-6 md:gap-8">
       <div class="flex flex-col items-center">
         <img
-          src={Routes.static_path(@socket, "/images/adoptoposs-submit.png")}
+          src={Routes.static_path(@socket, "/images/adoptoposs-submit.webp")}
           class="mb-4 md:mb-6 h-48 md:h-auto"
         />
         <h2 class="text-center mb-2">Submit Your Repo</h2>
@@ -64,7 +64,7 @@
 
       <div class="flex flex-col items-center">
         <img
-          src={Routes.static_path(@socket, "/images/adoptoposs-contact.png")}
+          src={Routes.static_path(@socket, "/images/adoptoposs-contact.webp")}
           class="mb-4 md:mb-6 h-48 md:h-auto"
         />
         <h2 class="text-center text-gray-700 mb-2">Contact Maintainers</h2>
@@ -77,7 +77,7 @@
 
       <div class="flex flex-col items-center">
         <img
-          src={Routes.static_path(@socket, "/images/adoptoposs-message.png")}
+          src={Routes.static_path(@socket, "/images/adoptoposs-message.webp")}
           class="mb-4 md:mb-6 h-48 md:h-auto"
         />
         <h2 class="text-center text-red-400 mb-2">Explore Projects</h2>
