--- a/lib/adoptoposs_web/templates/shared/navigation.html.heex
+++ b/lib/adoptoposs_web/templates/shared/navigation.html.heex
@@ -2,13 +2,13 @@
   <div class="flex items-center shrink-0 mr-2 sm:mr-6">
     <.link navigate={Routes.live_path(@conn, AdoptopossWeb.LandingPageLive)} class="h-10">
       <img
-        src={Routes.static_path(@conn, "/images/adoptoposs-logo.png")}
+        src={Routes.static_path(@conn, "/images/adoptoposs-logo.webp")}
         alt="Adoptoposs"
         class="h-10 hidden xs:inline-block"
       />
 
       <div
-        style={"background-image: url(#{Routes.static_path(@conn, "/images/adoptoposs-logo.png")})"}
+        style={"background-image: url(#{Routes.static_path(@conn, "/images/adoptoposs-logo.webp")})"}
         alt="Adoptoposs"
         class="h-10 w-10 bg-no-repeat bg-cover bg-right bg-origin-content xs:hidden inline-block"
       />
