--- a/lib/adoptoposs_web/templates/repo/repo.html.heex
+++ b/lib/adoptoposs_web/templates/repo/repo.html.heex
@@ -12,7 +12,7 @@
         <span class="text-gray-500 mr-4 md:mb-2">
           Submitted to
           <.link
-            navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ProjectLive)}
+            navigate={~p"/settings/projects"}
             class="text-gray-500 hover:text-gray-600 underline"
           >
             Your Projects
