--- a/lib/adoptoposs_web/templates/shared/meta_tags.html.heex
+++ b/lib/adoptoposs_web/templates/shared/meta_tags.html.heex
@@ -1,6 +1,6 @@
 <% title = AdoptopossWeb.SharingView.title(assigns) %>
 <% description = AdoptopossWeb.SharingView.description(assigns) %>
-<% image = AdoptopossWeb.SharingView.image(assigns) %>
+<% image = url(~p"/images/adoptoposs-social.jpg") %>
 <% url = AdoptopossWeb.SharingView.url(assigns) %>
 <% twitter_card_type = AdoptopossWeb.SharingView.twitter_card_type(assigns) %>
 
