--- a/lib/adoptoposs_web/templates/shared/navigation.html.heex
+++ b/lib/adoptoposs_web/templates/shared/navigation.html.heex
@@ -1,14 +1,14 @@
 <nav role="navigation" class="flex flex-row flex-wrap justify-between items-center">
   <div class="flex items-center shrink-0 mr-2 sm:mr-6">
-    <.link navigate={Routes.live_path(@conn, AdoptopossWeb.LandingPageLive)} class="h-10">
+    <.link navigate={~p"/"} class="h-10">
       <img
-        src={Routes.static_path(@conn, "/images/adoptoposs-logo.webp")}
+        src={~p"/images/adoptoposs-logo.webp"}
         alt="Adoptoposs"
         class="h-10 hidden xs:inline-block"
       />
 
       <div
-        style={"background-image: url(#{Routes.static_path(@conn, "/images/adoptoposs-logo.webp")})"}
+        style={"background-image: url(#{~p"/images/adoptoposs-logo.webp"})"}
         alt="Adoptoposs"
         class="h-10 w-10 bg-no-repeat bg-cover bg-right bg-origin-content xs:hidden inline-block"
       />
