--- a/lib/adoptoposs_web/templates/email/project_recommendations.html.heex
+++ b/lib/adoptoposs_web/templates/email/project_recommendations.html.heex
@@ -31,7 +31,7 @@
           <tr style="text-align:top;">
             <td style="padding: 18px 18px 6px 18px">
               <%= link(AdoptopossWeb.SharedView.project_name(project),
-                to: Routes.sharing_url(AdoptopossWeb.Endpoint, :index, project.uuid),
+                to: url(~p"/p/#{project.uuid}"),
                 class: "headline"
               ) %>
             </td>
@@ -65,10 +65,7 @@
 
       <mj-text css-class="text" align="center">
         <%= link("More #{language_name} projects…",
-          to:
-            Routes.live_url(AdoptopossWeb.Endpoint, AdoptopossWeb.LandingPageLive,
-              f: String.downcase(language_name)
-            )
+          to: url(~p"/?f=#{String.downcase(language_name)}")
         ) %>
       </mj-text>
     <% end %>
