--- a/lib/adoptoposs_web/templates/messages/contacted.html.heex
+++ b/lib/adoptoposs_web/templates/messages/contacted.html.heex
@@ -5,7 +5,7 @@
 
   <div class="flex md:hidden flex-col pb-4 bg-gray-50 sticky top-0">
     <.link
-      navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.MessagesLive.Interests)}
+      navigate={~p"/messages/interests"}
       class="flex items-center w-full font-semibold cursor-default pl-6 pt-3 pb-2 rounded cursor-pointer focus:bg-gray-200 text-gray-600 hover:text-gray-700 focus:text-gray-700"
     >
       Interests in your Projects
@@ -24,10 +24,7 @@
           <p class="text-lg md:text-2xl text-gray-500 text-center mb-4 md:mb-8">
             You did not contact any maintainer yet.
           </p>
-          <.link
-            navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive.Index)}
-            class="button-link mb-4"
-          >
+          <.link navigate={~p"/explore"} class="button-link mb-4">
             Explore Projects
           </.link>
           <p>
@@ -84,7 +81,7 @@
 
     <div class="hidden md:flex md:flex-col w-1/4 ml-8 border rounded border-gray-300">
       <.link
-        navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.MessagesLive.Interests)}
+        navigate={~p"/messages/interests"}
         class="flex items-center w-full pl-10 font-semibold cursor-default p-3 rounded cursor-pointer bg-white hover:bg-gray-100 focus:bg-gray-200 text-gray-600 hover:text-gray-700 focus:text-gray-700"
       >
         Interests in your Projects
