--- a/lib/adoptoposs_web/templates/messages/interests.html.heex
+++ b/lib/adoptoposs_web/templates/messages/interests.html.heex
@@ -10,7 +10,7 @@
     </div>
 
     <.link
-      navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.MessagesLive.Contacted)}
+      navigate={~p"/messages/contacted"}
       class="flex items-center w-full font-semibold cursor-default pl-6 pt-1 pb-2 rounded cursor-pointer focus:bg-gray-200 text-gray-600 hover:text-gray-700 focus:text-gray-700"
     >
       Contacted Maintainers
@@ -26,7 +26,7 @@
           </p>
           <p>
             Hint: Share your
-            <.link navigate={Routes.live_path(@socket, AdoptopossWeb.ProjectLive)}>
+            <.link navigate={~p"/settings/projects"}>
               submitted projects
             </.link>
             to let more people know you’re looking for help.
@@ -110,7 +110,7 @@
       </div>
 
       <.link
-        navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.MessagesLive.Contacted)}
+        navigate={~p"/messages/contacted"}
         class="flex items-center w-full pl-10 font-semibold cursor-default p-3 rounded cursor-pointer bg-white hover:bg-gray-100 focus:bg-gray-200 text-gray-600 hover:text-gray-700 focus:text-gray-700"
       >
         Contacted Maintainers
