--- a/lib/adoptoposs_web/templates/project/sharing.html.heex
+++ b/lib/adoptoposs_web/templates/project/sharing.html.heex
@@ -17,7 +17,7 @@
       <input
         type="text"
         readonly
-        value={Routes.sharing_url(AdoptopossWeb.Endpoint, :index, @project.uuid)}
+        value={url(~p"/p/#{@project.uuid}")}
         class="flex-grow px-2 py-1 rounded border border-gray-200"
         data-copy-target
       />
