--- a/lib/adoptoposs_web/templates/layout/email.html.heex
+++ b/lib/adoptoposs_web/templates/layout/email.html.heex
@@ -1,5 +1,11 @@
 <mjml>
   <mj-head>
+    <mj-font
+      name="Source Sans Pro"
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro"
+    />
+    <mj-font name="Oswald" href="https://fonts.googleapis.com/css?family=Oswald" />
+
     <mj-style>
       a {
       font-family: Source Sans Pro, sans-serif !important;
