--- a/lib/adoptoposs_web/templates/error/500.html.heex
+++ b/lib/adoptoposs_web/templates/error/500.html.heex
@@ -1,4 +1,4 @@
-<section class="flex flex-grow flex-col justify-center items-center text-center">
+<section class="flex grow flex-col justify-center items-center text-center">
   <h1>Adoptoposs says sorry!</h1>
   <p class="text-red-300 text-6xl">
     5<i class="fa-solid fa-bug text-6xl"></i><i class="fa-solid fa-bug text-6xl"></i>
