--- a/lib/adoptoposs_web/templates/landing_page/index.html.heex
+++ b/lib/adoptoposs_web/templates/landing_page/index.html.heex
@@ -8,13 +8,13 @@
     </p>
 
     <div class="flex flex-row items-center px-4 mt-16 md:px-0 md:mt-20">
-      <hr class="flex-grow border-gray-50" />
+      <hr class="grow border-gray-50" />
       <div class="self-center">
         <.link navigate={~p"/explore"} class="button-link light mx-3">
           Explore Projects
         </.link>
       </div>
-      <hr class="flex-grow border-gray-50" />
+      <hr class="grow border-gray-50" />
     </div>
   </section>
 </div>
@@ -78,13 +78,13 @@
     </div>
 
     <div class="flex flex-row items-center px-4 mb-4 mt-12 md:px-0 md:mb-0 md:mt-20">
-      <hr class="flex-grow border-gray-500" />
+      <hr class="grow border-gray-500" />
       <div class="self-center">
         <.link navigate={~p"/explore"} class="button-link dark mx-3 gray-500">
           Explore Projects
         </.link>
       </div>
-      <hr class="flex-grow border-gray-500" />
+      <hr class="grow border-gray-500" />
     </div>
   </section>
 </div>
@@ -166,13 +166,13 @@
     </p>
 
     <div class="flex flex-row items-center mt-12">
-      <hr class="flex-grow border-red-200" />
+      <hr class="grow border-red-200" />
       <div class="self-center">
         <.link navigate={~p"/auth/github"} class="button-link mx-3">
           <i class="fa-brands fa-github mr-1"></i> Log in with GitHub
         </.link>
       </div>
-      <hr class="flex-grow border-red-200" />
+      <hr class="grow border-red-200" />
     </div>
   </section>
 </div>
