--- a/lib/adoptoposs_web/templates/messages/interests.html.heex
+++ b/lib/adoptoposs_web/templates/messages/interests.html.heex
@@ -4,14 +4,14 @@
   <h2>Interests in your Projects</h2>
 
   <div class="flex md:hidden flex-col pb-4 bg-gray-50 sticky top-0">
-    <div class="flex items-center w-full font-semibold cursor-default pl-1 pt-3 pb-2 rounded bg-gray-50 text-red-600">
+    <div class="flex items-center w-full font-semibold cursor-default pl-1 pt-3 pb-2 rounded-sm bg-gray-50 text-red-600">
       <i class="fa-solid fa-chevron-down mr-2 text-sm"></i>
       <div class="w-full">Interests in your Projects</div>
     </div>
 
     <.link
       navigate={~p"/messages/contacted"}
-      class="flex items-center w-full font-semibold cursor-default pl-6 pt-1 pb-2 rounded cursor-pointer focus:bg-gray-200 text-gray-600 hover:text-gray-700 focus:text-gray-700"
+      class="flex items-center w-full font-semibold cursor-default pl-6 pt-1 pb-2 rounded-sm cursor-pointer focus:bg-gray-200 text-gray-600 hover:text-gray-700 focus:text-gray-700"
     >
       Contacted Maintainers
     </.link>
@@ -37,7 +37,7 @@
           <%= for {project, interests} <- @interests do %>
             <li
               id={"p-#{project.uuid}"}
-              class="card-item flex flex-col bg-white rounded shadow hover:shadow-md border border-gray-300"
+              class="card-item flex flex-col bg-white rounded-sm shadow-sm hover:shadow-md border border-gray-300"
             >
               <div class="p-4 md:p-6">
                 <%= render(AdoptopossWeb.SharedView, "project_repo.html", project: project) %>
@@ -51,7 +51,7 @@
                         class: "h-8 w-8 md:h-12 md:w-12",
                         title: "@#{interest.creator.username}" do %>
                         <%= img_tag(interest.creator.avatar_url,
-                          class: "rounded rounded-full w-full h-full"
+                          class: "rounded-full w-full h-full"
                         ) %>
                       <% end %>
 
@@ -103,15 +103,15 @@
       <% end %>
     </div>
 
-    <div class="hidden md:flex md:flex-col w-1/4 ml-8 border rounded border-gray-300">
-      <div class="flex items-center w-full font-semibold cursor-default px-4 p-3 rounded bg-white text-red-600">
+    <div class="hidden md:flex md:flex-col w-1/4 ml-8 border rounded-sm border-gray-300">
+      <div class="flex items-center w-full font-semibold cursor-default px-4 p-3 rounded-sm bg-white text-red-600">
         <i class="fa-solid fa-chevron-left mr-4 text-sm"></i>
         <div class="w-full">Interests in your Projects</div>
       </div>
 
       <.link
         navigate={~p"/messages/contacted"}
-        class="flex items-center w-full pl-10 font-semibold cursor-default p-3 rounded cursor-pointer bg-white hover:bg-gray-100 focus:bg-gray-200 text-gray-600 hover:text-gray-700 focus:text-gray-700"
+        class="flex items-center w-full pl-10 font-semibold cursor-default p-3 rounded-sm cursor-pointer bg-white hover:bg-gray-100 focus:bg-gray-200 text-gray-600 hover:text-gray-700 focus:text-gray-700"
       >
         Contacted Maintainers
       </.link>
