--- a/lib/adoptoposs_web/templates/page/faq_item.html.heex
+++ b/lib/adoptoposs_web/templates/page/faq_item.html.heex
@@ -1,4 +1,4 @@
-<details class="bg-white rounded border">
+<details class="bg-white rounded-sm border">
   <summary class="font-semibold p-4 text-lg md:text-xl bg-white rounded">
     <%= @question %>
   </summary>
