--- a/lib/adoptoposs_web/templates/repo/index.html.heex
+++ b/lib/adoptoposs_web/templates/repo/index.html.heex
@@ -13,7 +13,7 @@
 
           <select
             name="id"
-            class="h1 block appearance-none h-16 w-full bg-gray-100 pr-12 leading-tight focus:outline-none text-4xl font-semibold text-pink-900 cursor-pointer"
+            class="h1 block appearance-none h-16 w-full bg-gray-100 pr-12 leading-tight focus:outline-hidden text-4xl font-semibold text-pink-900 cursor-pointer"
           >
             <%= for organization <- @organizations do %>
               <option
