--- a/lib/adoptoposs_web/templates/error/404.html.heex
+++ b/lib/adoptoposs_web/templates/error/404.html.heex
@@ -1,4 +1,4 @@
-<section class="flex flex-grow flex-col justify-center items-center ">
+<section class="flex grow flex-col justify-center items-center ">
   <h1>Adoptoposs says no!</h1>
   <p class="text-red-300 text-6xl">
     4<i class="fa-solid fa-bug text-6xl"></i>4
