--- a/lib/adoptoposs_web/templates/layout/app.html.heex
+++ b/lib/adoptoposs_web/templates/layout/app.html.heex
@@ -1,7 +1,7 @@
 <section>
   <%= if Phoenix.Flash.get(@flash, :error) do %>
     <p
-      class="text-red-400 text-center font-font-semibold p-4 rounded border border-red-300"
+      class="text-red-400 text-center font-font-semibold p-4 rounded-sm border border-red-300"
       role="alert"
     >
       <%= Phoenix.Flash.get(@flash, :error) %>
