--- a/lib/adoptoposs_web/templates/layout/error.html.heex
+++ b/lib/adoptoposs_web/templates/layout/error.html.heex
@@ -31,7 +31,7 @@
           </button>
         </div>
 
-        <div class="w-full text-md block flex-grow justify-end lg:flex lg:flex-row lg:items-end lg:w-auto">
+        <div class="w-full text-md block grow justify-end lg:flex lg:flex-row lg:items-end lg:w-auto">
           <.link href="#" onClick="history.go(-1);return true;">Go back</.link>
         </div>
       </nav>
