--- a/lib/adoptoposs_web/templates/layout/root.html.heex
+++ b/lib/adoptoposs_web/templates/layout/root.html.heex
@@ -22,6 +22,9 @@
 
     <header>
       <%= render(AdoptopossWeb.SharedView, "navigation.html", assigns) %>
+      <div class="bg-orange-200">
+        <%= render(AdoptopossWeb.SharedView, "notice.html", assigns) %>
+      </div>
     </header>
 
     <main role="main" class="pb-8">
