--- a/lib/adoptoposs_web/templates/layout/email.text.eex
+++ b/lib/adoptoposs_web/templates/layout/email.text.eex
@@ -1,3 +1,11 @@
+
+--------
+Adoptoposs is going to be discontinued and will be closed down on February 1, 2026.
+All your data on this platform will be deleted and will not be accessible anymore after that date.
+
+Thank you for being part of the journey by using this platform and for your efforts to make the maintenance of open source software more resilient. ❤
+--------
+
 <%= @inner_content %>
 
 Always keep maintaining!
